<resources>
    <string name="app_name">Sudoku Game</string>
    <string name="play_sudoku" translatable="false">Play Sudoku</string>
    <string name="norwegian_description">A picture of a norwegian flag</string>
    <string name="british_description">A picture of a british flag</string>

    <string name="new_game">Start Now</string>
    <string name="add_new_board">Add new board</string>
    <string name="continue_new_board">Continue</string>
    <string name="successful_new_board">New board saved</string>
    <string name="fail_new_board">Failed to save new board</string>
    <string name="show_instructions">Show Guidelines</string>
    <string name="choose_language">Choose language:</string>
    <string name="copyright_text" translatable="false">Copyright © 2023, Chinmay Roy.</string>

    <string name="guidelines" translatable="false">Guidelines</string>

    <string name="instructions">Instructions</string>
    <string name="instructions_1">1. In Sudoku it is intended to place all the remaining pieces on the board. The numbers range from 1 to 9 (in 9x9 Sudoku).</string>
    <string name="instructions_2">2. The board is separated into several squares, and inside each of them it is only allowed to place one of each number.</string>
    <string name="instructions_3">3. It is only allowed to place one of each number at each row, both horizontal and vertical.</string>
    <string name="go_back_button">Go back</string>

    <string name="contact_us" translatable="false">Contact Us</string>
    <string name="contact_us_1" translatable="false">Mobile: +8801571156707</string>
    <string name="contact_us_2" translatable="false">Email: chinmayroycom@gmail.com</string>
    <string name="contact_us_3" translatable="false">Address: Panthapath, Dhaka, Bangladesh</string>

    <string name="about_us" translatable="false">About Us</string>
    <string name="about_developer" translatable="false">About Developer</string>
    <string name="about_developer_name" translatable="false">Chinmay Roy</string>
    <string name="about_developer_designation" translatable="false">Developer</string>
    <string name="about_developer_short_description" translatable="false">Short Description: As a developer, I am driven by a passion for creating unique and innovative designs. I constantly explore new possibilities and strive to deliver exceptional user experiences. With a focus on originality, I incorporate cutting-edge techniques and stay up to date with industry trends. My goal is to design intuitive interfaces, optimize performance, and ensure seamless functionality. I embrace challenges and excel at transforming concepts into reality. Overall, I am dedicated to pushing the boundaries of development and delivering outstanding results.</string>

    <string name="choose_difficulty">Choose difficulty:</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="start_game">Start Game</string>
    <string name="choose_number">Choose number</string>
    <string name="choose_a_number">Choose number to place:</string>
    <string name="place_number">Place number</string>
    <string name="piece_unsure">Mark piece as unsure</string>
    <string name="remove_piece">Remove piece</string>
    <string name="start_piece_error">Can not change start piece</string>
    <string name="check_board">Check board</string>
    <string name="board_correct">Board is correct</string>
    <string name="board_incorrect">Board is not correct</string>
</resources>
