<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.chinmay.roy.sudoku_game.MainActivity">
<!--Author: Chinmay Roy
    Website: https://chinmayroy.github.io-->
<item
    android:id="@+id/action_guidelines"
    android:orderInCategory="100"
    android:title="@string/guidelines"
    app:showAsAction="never" />
<item
    android:id="@+id/action_contact_us"
    android:orderInCategory="100"
    android:title="@string/contact_us"
    app:showAsAction="never" />
<item
    android:id="@+id/action_about_developer"
    android:orderInCategory="100"
    android:title="@string/about_developer"
    app:showAsAction="never" />

<!--    Author: Chinmay Roy
        Website: https://chinmayroy.github.io -->

</menu>